# rocket-app2

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose-local.yml  docker-compose-prod.yml
.github/workflows/: build.yml  hotfix-production-branch.yml  master_push.yml  mr.yml  pull_request.yml  rust.yml  upload-artifacts.yml
kubernetes/: deployment-mongo-kube.yml  deployment-rust-app-kube.yml  node-port-service-mongo-kube.yml  service-cluster-ip-mongo-kube.yml  service-load-balancer-rust-app-kube.yml  volume-claim-mongo.yml  volume-mongo.yml
kubernetes/production/: config-properties.txt  deployment-rust-app-kube.yml  rust-app-configMap-kube.yaml  rust-app-service-kube.yml  service-load-balancer-rust-app-kube.yml
src/: lib.rs  main.rs  mongo_db.rs  person_models.rs  person_repository.rs  person_service.rs
src/api_errors/: error.rs
src/fairings/: cors.rs
src/routes/: catchers.rs  health_checks.rs  mod.rs  person.rs
src/tests/: mod.rs
